successfully added some ops, who knows
