# docs/swagger.yaml
@@ -44,11 +44,6 @@ definitions:
       roleID:
         type: integer
     type: object
-  github_com_jumayevgadam_tsu-toleg_internal_models_user.UserWithTokens:
-    properties:
-      Token:
-        type: string
-    type: object
 host: localhost:4000
 info:
   contact:
@@ -89,7 +84,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_jumayevgadam_tsu-toleg_internal_models_user.UserWithTokens'
+            type: string
         "400":
           description: Bad Request
           schema: {}
@@ -104,13 +99,8 @@ paths:
       consumes:
       - multipart/form-data
       description: create user func general func for creating users.
-      operationId: create-user
+      operationId: register-user
       parameters:
-      - description: role
-        in: path
-        name: role
-        required: true
-        type: string
       - in: formData
         name: group-id
         type: integer
@@ -144,7 +134,7 @@ paths:
         "500":
           description: Internal Server Error
           schema: {}
-      summary: Create User.
+      summary: Register User.
       tags:
       - Users
   /faculty/{id}:
