# internal/models/user/details.go
@@ -1,10 +1,5 @@
 package user
 
-// UserWithTokens model is user details with token.
-type UserWithTokens struct {
-	Token string `json:"Token"`
-}
-
 type Details struct {
 	ID       int    `db:"id"`
 	RoleID   int    `db:"role_id"`
